sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3: error: not found: value bubbleSort3
		bubbleSort3();
                ^AlgBubbleSort3:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if (c=1) {
         ^